# sidekick

./: LICENSE  README.md  pyproject.toml
src/sidekick/: main.py
