[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick"
version = "1.0.1" # Version bump for the fix
authors = [
  { name="Kris Clark", email="kris.clark@snhu.edu" },
]
description = "A friendly AI agent for your terminal that can create, edit, and test code."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-openai",
    "requests",
    "prompt-toolkit"
]

[project.urls]
"Homepage" = "https://github.com/krisclarkdev/sidekick"
"Bug Tracker" = "https://github.com/krisclarkdev/sidekick/issues"

[project.scripts]
sidekick = "sidekick.main:main"

[tool.setuptools.packages.find]
where = ["src"]
